test/visibility/private/moduleSymbols/accessPrivateUsedSibling2.good
accessPrivateUsedSibling2.chpl:18: In function 'main':
accessPrivateUsedSibling2.chpl:19: error: unresolved call 'secretFunction(11)'
accessPrivateUsedSibling2.chpl:19: note: because no functions named secretFunction found in scope
